--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,6 @@ jobs:
     environment:
       name: ${{ github.event.inputs.environment }}
     steps:
-      # Steps remain the same as before
+      - name: Test
+        run: |
+          env
