--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,16 @@
 name: Manual Build and Deploy
 
-# on:
-#   workflow_dispatch:
-#     inputs:
-#       environment:
-#         description: "Deployment environment"
-#         required: true
-#         default: "development"
+on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Deployment environment"
+        required: true
+        default: "development"
+  # Push event
+  push:
+    branches:
+      - "main"
 
 jobs:
   build-and-deploy:
