--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: development
+    env:
+      ENV_NAME: ${{ job.environment.name }}
     steps:
       - name: Test
         run: |
@@ -25,6 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: production
+    env:
+      ENV_NAME: ${{ job.environment.name }}
     steps:
       - name: Test
         run: |
