--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
     environment:
       name: development
     env:
-      ENV_NAME: development
+      ENV_NAME: ${{ vars.ENVIRONMENT }}
     steps:
       - name: Test
         run: |
