--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,7 @@
 name: Call Reusable Workflow
 
 on:
-  push:
-    branches:
-      - main
-      - develop
+  push: true
 
 jobs:
   call-deploy-workflow:
